example/ecs.tf
module "nginx_sg" {
  source      = "../modules/security_group"
  name        = "nginx-ng"
  vpc_id      = aws_vpc.example.id
  port        = 80
  cidr_blocks = [aws_vpc.example.cidr_block]
}

# resource "aws_ecs_cluster" "example" {
#   name = "example"
# }

# resource "aws_ecs_task_definition" "example" {
#   family                   = "example"
#   cpu                      = "256"
#   memory                   = "512"
#   network_mode             = "awsvpc"
#   requires_compatibilities = ["FARGATE"]
#   container_definitions    = file("./container_definitions.json")
#   execution_role_arn       = module.ecs_task_execution_role.iam_role_arn
# }

# resource "aws_ecs_service" "example" {
#   name                              = "example"
#   cluster                           = aws_ecs_cluster.example.arn
#   task_definition                   = aws_ecs_task_definition.example.arn
#   desired_count                     = 2
#   launch_type                       = "FARGATE"
#   platform_version                  = "1.3.0"
#   health_check_grace_period_seconds = 60

#   network_configuration {
#     assign_public_ip = false
#     security_groups  = [module.nginx_sg.security_group_id]

#     subnets = [
#       aws_subnet.private_0.id,
#       aws_subnet.private_1.id,
#     ]
#   }

#   load_balancer {
#     target_group_arn = aws_lb_target_group.example.arn
#     container_name   = "example"
#     container_port   = 80
#   }

#   lifecycle {
#     ignore_changes = [task_definition]
#   }
# }
